[package]
name = "vinwolf"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bitvec = "1.0.1"
serde_json = "1.0"
ark-vrf ={ version = "0.1.0", features = ["bandersnatch", "ring"] }
hex = "0.4.3"
frame-support = "37.0.0"
sp-core = "34.0.0"
array-bytes = "6.2.3"
num = "0.4"
erasure-coding = { git = "https://github.com/paritytech/erasure-coding.git", branch = "main" }
once_cell = "1.17"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
rayon = "1.5"

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }