[workspace]
members = [ 
    "constants",
    "jam-types",
    "codec",
    "utils",
    "blockchain/state/*",
    "blockchain/block", 
    "pvm", 
    "tests", 
    "vinwolf-target", 
    "experiments/*", 
    "database", 
]
resolver = "2"


[workspace.package]
version = "0.1.0"
authors = ["Bernardo Lopez <bernar792@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/bloppan/vinwolf"


[workspace.dependencies]
constants = { path = "constants", default-features = false }
jam-types = { path = "jam-types" }
codec = { path = "codec" }
utils = { path = "utils" }
state-handler = { path = "blockchain/state/state-handler" }
block = { path = "blockchain/block" }
accumulation = { path = "blockchain/state/accumulation" }
authorization = { path = "blockchain/state/authorization" }
disputes = { path = "blockchain/state/disputes" }
entropy = { path = "blockchain/state/entropy" }
recent-history = { path = "blockchain/state/recent-history" }
reports = { path = "blockchain/state/reports" }
safrole = { path = "blockchain/state/safrole" }
services = { path = "blockchain/state/services" }
statistics = { path = "blockchain/state/statistics" }
validators = { path = "blockchain/state/validators" }
state-controller = { path = "blockchain/state/state-controller" }
vinwolf-target = { path = "vinwolf-target" }
pvm = { path = "pvm" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
hex = "0.4.3"
sp-core = "34.0.0"
ark-vrf = { version = "0.1.0", features = ["bandersnatch", "ring"] }
once_cell = "1.17"
dotenv = "0.15"
env_logger = "0.10"
tokio = { version = "1.40", features = ["full"] }
rocksdb = "0.24.0"
bincode = "2.0.1"
clap = { version = "4", features = ["derive"] }
quinn = { version = "0.11", features = ["rustls"] }
rayon = "1.11"
