[workspace]
members = [ 
    "blockchain/block",
    "blockchain/state/*",
    "codec",
    "constants",
    "experiments/*", 
    "jam-types",
    "pvm", 
    "storage",
    "tests",
    "utils",
    "vinwolf-target", 
]
resolver = "2"


[workspace.package]
version = "0.1.0"
authors = ["Bernardo Lopez <bernar792@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/bloppan/vinwolf"


[workspace.dependencies]
accumulation = { path = "blockchain/state/accumulation" }
authorization = { path = "blockchain/state/authorization" }
block = { path = "blockchain/block" }
codec = { path = "codec" }
constants = { path = "constants" }
disputes = { path = "blockchain/state/disputes" }
entropy = { path = "blockchain/state/entropy" }
jam-types = { path = "jam-types" }
pvm = { path = "pvm" }
recent-history = { path = "blockchain/state/recent-history" }
reports = { path = "blockchain/state/reports" }
safrole = { path = "blockchain/state/safrole" }
services = { path = "blockchain/state/services" }
state-controller = { path = "blockchain/state/state-controller" }
state-handler = { path = "blockchain/state/state-handler" }
statistics = { path = "blockchain/state/statistics" }
storage = { path = "storage" }
utils = { path = "utils" }
validators = { path = "blockchain/state/validators" }
vinwolf-target = { path = "vinwolf-target" }

# Third party libraries
ark-vrf = { version = "0.1.0", features = ["bandersnatch", "ring"] }
quinn = { version = "0.11", features = ["rustls"] }
rocksdb = "0.24.0"
sp-core = "34.0.0"
