[package]
name = "codec"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
constants = { workspace = true }
jam-types = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
hex = { workspace = true }