[package]
name = "jam-types"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
constants = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[features]
default = ["tiny"]
tiny = ["constants/tiny"]
full = ["constants/full"]