[package]
name = "pvm"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
constants = { workspace = true }
jam-types = { workspace = true }
codec = { workspace = true }
utils = { workspace = true }
state-handler = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
sp-core = "34.0.0"