[package]
name = "storage"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
constants = { workspace = true }
rocksdb = { workspace = true, optional = true }
jam-types = { workspace = true }

[features]
DB = ["rocksdb"]
