[package]
name = "storage"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
constants = { workspace = true }
rocksdb = { workspace = true, optional = true }
jam-types = { workspace = true }
utils = { workspace = true }

[features]
DB = ["rocksdb"]

[[bin]]
name = "storage_debug"
path = "src/bin/storage_debug.rs"