[package]
name = "tests"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
accumulation = { workspace = true }
authorization = { workspace = true }
block = { workspace = true }
codec = { workspace = true }
constants = { workspace = true }
disputes = { workspace = true }
entropy = { workspace = true }
jam-types = { workspace = true }
pvm = { workspace = true }
recent-history = { workspace = true }
reports = { workspace = true }
safrole = { workspace = true }
services = { workspace = true }
state-controller = { workspace = true }
state-handler = { workspace = true }
statistics = { workspace = true }
utils = { workspace = true }
vinwolf-target = { workspace = true }
validators = { workspace = true }

sp-core = "34.0.0"


[features]
default = ["tiny"]
tiny = ["constants/tiny"]
full = ["constants/full"]