[package]
name = "utils"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
constants = { workspace = true }
jam-types = { workspace = true }
codec = { workspace = true }
sp-core = { workspace = true }
hex = { workspace = true }
ark-vrf = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[features]
default = ["tiny"]
tiny = ["constants/tiny"]
full = ["constants/full"]