[package]
name = "utils"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
constants = { workspace = true }
jam-types = { workspace = true }

ark-vrf = { workspace = true }
sp-core = { workspace = true }