[package]
name = "vinwolf-target"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
block = { workspace = true }
codec = { workspace = true }
constants = { workspace = true }
jam-types = { workspace = true }
safrole = { workspace = true }
state-controller = { workspace = true }
state-handler = { workspace = true }
utils = { workspace = true }

sp-core = "34.0.0"

[features]
default = ["tiny"]
tiny = ["constants/tiny"]
full = ["constants/full"]

[lib]
name = "vinwolf_target"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
debug = 0
overflow-checks = false
strip = "none"

[build]
rustflags = ["-C", "target-cpu=x86-64-v3"]