[package]
name = "block"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
constants = { workspace = true }
jam-types = { workspace = true }
codec = { workspace = true }
utils = { workspace = true }
handler = { workspace = true }
log = { workspace = true }
sp-core = "34.0.0"
ark-vrf = { version = "0.1.0", features = ["bandersnatch", "ring"] }