[package]
name = "block"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
constants = { workspace = true }
jam-types = { workspace = true }
state-handler = { workspace = true }
utils = { workspace = true }

ark-vrf = { version = "0.1.0", features = ["bandersnatch", "ring"] }
sp-core = "34.0.0"