[package]
name = "rocksdb-poc"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
rocksdb = "0.24.0"
bincode = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"