[package]
name = "rocksdb-poc"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
rocksdb = "0.24.0"
utils = { workspace = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"