[package]
name = "test_quinn"
version = "0.1.0"
edition = "2024"

[dependencies]
constants = { workspace = true }
codec = { workspace = true }
primitive-types = "0.12"
hex = { workspace = true }
base32 = "0.5.1"
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0"
quinn = { version = "0.11", features = ["rustls"] }
rustls = { version = "0.23.31", features = ["ring"] }
rustls-pemfile = "2.2"


[features]
default = ["tiny"]
tiny = ["constants/tiny"]
full = ["constants/full"]
