[package]
name = "accumulation"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
constants = { workspace = true }
jam-types = { workspace = true }
pvm = { workspace = true }
state-handler = { workspace = true }
statistics = { workspace = true }
utils = { workspace = true }

ark-vrf = { workspace = true }
sp-core = { workspace = true }