[package]
name = "authorization"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
constants = { workspace = true }
jam-types = { workspace = true }
utils = { workspace = true }
state-handler = { workspace = true }
block = { workspace = true }
log = { workspace = true }

[features]
default = ["tiny"]
tiny = ["constants/tiny"]
full = ["constants/full"]