[package]
name = "authorization"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
block = { workspace = true }
constants = { workspace = true }
jam-types = { workspace = true }
state-handler = { workspace = true }
utils = { workspace = true }

