[package]
name = "recent-history"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
block = { workspace = true }
codec = { workspace = true }
constants = { workspace = true }
jam-types = { workspace = true }
utils = { workspace = true }

sp-core = { workspace = true }