[package]
name = "recent_history"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
constants = { workspace = true }
jam-types = { workspace = true }
utils = { workspace = true }
block = { workspace = true }
once_cell = { workspace = true }
sp-core = "34.0.0"