[package]
name = "safrole"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
block = { workspace = true }
codec = { workspace = true }
constants = { workspace = true }
entropy = { workspace = true }
jam-types = { workspace = true }
utils = { workspace = true }
validators = { workspace = true }

ark-vrf = { version = "0.1.0", features = ["bandersnatch", "ring"] }
sp-core = "34.0.0"