[package]
name = "services"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
block = { workspace = true }
codec = { workspace = true }
constants = { workspace = true }
jam-types = { workspace = true }
utils = { workspace = true }

