[package]
name = "state-controller"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
accumulation = { workspace = true }
authorization = { workspace = true }
block = { workspace = true }
codec = { workspace = true }
constants = { workspace = true }
disputes = { workspace = true }
entropy = { workspace = true }
jam-types = { workspace = true }
recent-history = { workspace = true }
reports = { workspace = true }
safrole = { workspace = true }
services = { workspace = true }
statistics = { workspace = true }
state-handler = { workspace = true }
utils = { workspace = true }
validators = { workspace = true }

sp-core = { workspace = true }