[package]
name = "state-handler"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
constants = { workspace = true }
jam-types = { workspace = true }
storage = { workspace = true }
utils = { workspace = true }

sp-core = { workspace = true }