[package]
name = "validators"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
constants = { workspace = true }
jam-types = { workspace = true }
state-handler = { workspace = true }
utils = { workspace = true }